# satoo-llm-skills

./: .gitignore  LICENSE  README.md  bootstrap.sh
ble-hack-skill/: README.md  SKILLS.md
ble-hack-skill/src/: lib.rs  manufacturers.rs
commands/: commit-skill.md  configure-global.md  configure-skills.md  dev-pull-skill.md  pull-skill.md
skills/ble-hack-skill/: Cargo.toml  FINDINGS.template.md  README.md  SKILL.md  SKILLS.md  STATUS.template.md  verify_plan.example.json
skills/ble-hack-skill/src/: crc.rs  discover.rs  gatt.rs  lib.rs  manufacturers.rs  pipeline.rs  probe_analyze.rs  session.rs  verify.rs  workdir.rs
skills/generate-instruction-skill/: SKILL.md
skills/instructions-generation/: SKILL.md
