[package]
name = "ble-hack-skill"
version = "0.1.0"
edition = "2024"
description = "BLE protocol reverse-engineering skill — scan, rank, and discover peripherals"

[dependencies]
anyhow = "1.0.102"
btleplug = "0.12.0"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
uuid = "1.23.3"
